--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -59,3 +59,8 @@ jobs:
 
       - name: Deploy to Google Play Internal Test Track
         run: ./gradlew --no-configuration-cache -PpreDexLibs=false publishInternalReleaseBundle --stacktrace
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: my-artifact
+          path: '**/*.apk'
