--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,6 +2,7 @@ name: Zotero Android CI
 
 on:
   push:
+    branches: [ "master" ]
     # Pattern matched against refs/tags
     tags:
       - '**'  # Push events to every tag including hierarchical tags like v1.0/beta
