--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -58,8 +58,8 @@ jobs:
       - name: Download Android dependencies
         run: ./gradlew androidDependencies --no-configuration-cache
 
-      - name: Deploy to Google Play Internal Test Track
-        run: ./gradlew --no-configuration-cache -PpreDexLibs=false publishInternalReleaseBundle --stacktrace
+ #     - name: Deploy to Google Play Internal Test Track
+#        run: ./gradlew --no-configuration-cache -PpreDexLibs=false publishInternalReleaseBundle --stacktrace
 
       - uses: actions/upload-artifact@v4
         with:
