--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -62,7 +62,8 @@ jobs:
 
  #     - name: Deploy to Google Play Internal Test Track
 #        run: ./gradlew --no-configuration-cache -PpreDexLibs=false publishInternalReleaseBundle --stacktrace
-
+      - name: Build with Gradle
+        run: ./gradlew assembleDebug
       - uses: actions/upload-artifact@v4
         with:
           name: my-artifact
